--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "flatpickr": "^4.6.6",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "vanilla-tilt": "^1.7.0"
   },
   "version": "0.1.0",
   "devDependencies": {
