--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.3",
     "flatpickr": "^4.6.6",
+    "isotope-layout": "^3.0.6",
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.13.0",
     "popper.js": "^1.16.1",
+    "stimulus": "^1.1.1",
     "turbolinks": "^5.2.0",
     "vanilla-tilt": "^1.7.0"
   },
